force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <label>Review</label>
    <pluralLabel>Reviews</pluralLabel>

    <nameField>
        <label>Review Number</label>
        <type>AutoNumber</type>
        <displayFormat>REV-{0000}</displayFormat>
    </nameField>

    <sharingModel>ReadWrite</sharingModel>
</CustomObject>